--- a/web-application-front-end/src/components/premierLeagueTables/standingsTable/standingsTable.css
+++ b/web-application-front-end/src/components/premierLeagueTables/standingsTable/standingsTable.css
@@ -17,13 +17,13 @@
 }
 
 .standings-title {
-    display:flex; 
+    display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px;
     padding: 10px;
     text-align: center;
-    font-size: 24px;
+    font-size: 30px;
     font-weight: bold;
     color: #333333be;
 }
